--- a/src/core/mac/res/html/css/4HCPitP8ZT9.css
+++ b/src/core/mac/res/html/css/4HCPitP8ZT9.css
@@ -78,7 +78,7 @@ select {
 }
 
 .inputsearch {
-    background: #FFFFFF url(/rsrc.php/v3/yL/r/unHwF9CkMyM.png) no-repeat left 4px;
+    background: #FFFFFF url(/html/imgs/unHwF9CkMyM.png) no-repeat left 4px;
     padding-left: 17px
 }
 
@@ -426,140 +426,140 @@ img.tracking_pixel {
 }
 
 ._9-y._3j7l {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -56px -255px
 }
 
 ._9-y._3j7l._hly {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: 0 -269px
 }
 
 ._9-y._3j7m {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -70px -255px
 }
 
 ._9-y._3j7n {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -28px -269px
 }
 
 ._9-y._3j7o {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -42px -255px
 }
 
 ._9-y._3j7p {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -42px -269px
 }
 
 ._9-y._3j7q {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: 0 -255px
 }
 
 ._9-y._3j7r {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -98px -255px
 }
 
 ._9-y._3j7s {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -14px -255px
 }
 
 ._9-y._3rya {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -28px -255px
 }
 
 ._9-y._4aou {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -14px -269px
 }
 
 ._9-y._3qr6 {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -56px -269px
 }
 
 ._9-y._4vps {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -84px -255px
 }
 
 ._9-y._pxi._3j7m {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -62px -238px
 }
 
 ._9-y._pxi._3j7n {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -104px -238px
 }
 
 ._9-y._pxi._3j7o {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -48px -238px
 }
 
 ._9-y._pxi._3j7q {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -107px -158px
 }
 
 ._9-y._pxi._3j7r {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -90px -238px
 }
 
 ._9-y._pxi._3qr6 {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -34px -238px
 }
 
 ._9-y._pxi._4vps {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -76px -238px
@@ -571,91 +571,91 @@ img.tracking_pixel {
 }
 
 ._2p7a._3j7l, ._9--._3j7l {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -17px -221px
 }
 
 ._2p7a._3j7l._hly, ._9--._3j7l._hly {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -85px -221px
 }
 
 ._2p7a._3j7m, ._9--._3j7m {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -34px -221px
 }
 
 ._2p7a._3j7n, ._9--._3j7n {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: 0 -238px
 }
 
 ._2p7a._3j7p, ._9--._3j7p {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -17px -238px
 }
 
 ._2p7a._3j7o, ._9--._3j7o {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: 0 -221px
 }
 
 ._2p7a._3j7q, ._9--._3j7q {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -53px -202px
 }
 
 ._2p7a._3j7r, ._9--._3j7r {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -68px -221px
 }
 
 ._2p7a._3j7s, ._9--._3j7s {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -70px -202px
 }
 
 ._2p7a._3rya, ._9--._3rya {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -87px -202px
 }
 
 ._2p7a._4aou, ._9--._4aou {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -102px -221px
 }
 
 ._2p7a._3qr6, ._9--._3qr6 {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -104px -202px
 }
 
 ._2p7a._4vps, ._9--._4vps {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -51px -221px
@@ -667,63 +667,63 @@ img.tracking_pixel {
 }
 
 ._19kl._3j7l {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -19px -183px
 }
 
 ._19kl._3j7l._hly {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -76px -183px
 }
 
 ._19kl._3j7m {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -38px -183px
 }
 
 ._19kl._3j7n {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: 0 -202px
 }
 
 ._19kl._3j7o {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: 0 -183px
 }
 
 ._19kl._3j7q {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -69px -158px
 }
 
 ._19kl._3j7r {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -57px -183px
 }
 
 ._19kl._3rya {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -88px -158px
 }
 
 ._19kl._4aou {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -95px -183px
@@ -737,27 +737,27 @@ img.tracking_pixel {
 }
 
 ._6qj3._3j7l {
-    background-image: url(/rsrc.php/v3/yp/r/uqyTX_kDKHl.png)
+    background-image: url(/html/imgs/uqyTX_kDKHl.png)
 }
 
 ._6qj3._3j7l._hly {
-    background-image: url(/rsrc.php/v3/ye/r/MINEEG47nWx.png)
+    background-image: url(/html/imgs/MINEEG47nWx.png)
 }
 
 ._6qj3._3j7m {
-    background-image: url(/rsrc.php/v3/y-/r/l_0dRBh2Ihj.png)
+    background-image: url(/html/imgs/l_0dRBh2Ihj.png)
 }
 
 ._6qj3._3j7n {
-    background-image: url(/rsrc.php/v3/yc/r/SwNji1kOnjA.png)
+    background-image: url(/html/imgs/SwNji1kOnjA.png)
 }
 
 ._6qj3._3j7o {
-    background-image: url(/rsrc.php/v3/y6/r/0ExJGJohl7a.png)
+    background-image: url(/html/imgs/0ExJGJohl7a.png)
 }
 
 ._6qj3._3j7q {
-    background-image: url(/rsrc.php/v3/yx/r/EJf_3Q-iwuD.png)
+    background-image: url(/html/imgs/EJf_3Q-iwuD.png)
 }
 
 ._2p7b, ._9-_ {
@@ -867,7 +867,7 @@ i.img u {
 
 ._5v3q ._1m42::before, ._1m42::before {
     animation: rotateSpinner 1.2s linear infinite;
-    background-image: url(/rsrc.php/v3/yN/r/WgFKRx0VFOG.png);
+    background-image: url(/html/imgs/WgFKRx0VFOG.png);
     border: 0;
     content: '';
     display: inline-block;
@@ -1355,7 +1355,7 @@ form.async_saving ._4jy2, a.async_saving._4jy2, ._4jy2._42fr {
 }
 
 .sp_EpFBfDAqT7a_2x {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-size: 121px 283px;
     background-repeat: no-repeat;
     display: inline-block;
