--- a/src/core/mac/res/html/css/ZvcBLy34iDb.css
+++ b/src/core/mac/res/html/css/ZvcBLy34iDb.css
@@ -54,7 +54,7 @@
 }
 
 .fbMarketingMenu a.currentPage, .fbMarketingMenu a:hover {
-    background: #F5F6F7 url(/rsrc.php/v3/yK/r/9a4ELUaKgl6.png) no-repeat center right;
+    background: #F5F6F7 url(/html/imgs/logo.png) no-repeat center right;
     text-decoration: none
 }
 
@@ -75,7 +75,7 @@
 }
 
 .fbForBusinessTip {
-    background: #F5F6F7 url(/rsrc.php/v3/yb/r/qt94E91uvnk.png) no-repeat 15px 10px;
+    background: #F5F6F7 url(/html/imgs/qt94E91uvnk.png) no-repeat 15px 10px;
     border: 1px solid #ccc;
     padding-left: 40px
 }
@@ -351,7 +351,7 @@ html ._5hy2 label, html ._5hy2 input, html ._5hy2 button {
 }
 
 ._43dj .uiInputLabelInput > input + span:before {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -19px -202px;
@@ -363,7 +363,7 @@ html ._5hy2 label, html ._5hy2 input, html ._5hy2 button {
 }
 
 ._43dj .uiInputLabelInput > input:checked + span:before {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -36px -202px
@@ -811,7 +811,7 @@ html ._5hy2 label, html ._5hy2 input, html ._5hy2 button {
 }
 
 ._2qcu:after {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -19px -202px;
@@ -823,7 +823,7 @@ html ._5hy2 label, html ._5hy2 input, html ._5hy2 button {
 }
 
 ._2qcs:checked + ._2qcu:after {
-    background-image: url(/rsrc.php/v3/yB/r/ziMHjXE-QJF.png);
+    background-image: url(/html/imgs/logo.png);
     background-repeat: no-repeat;
     background-size: 121px 283px;
     background-position: -36px -202px
@@ -1163,7 +1163,7 @@ html ._5hy2 label, html ._5hy2 input, html ._5hy2 button {
 }
 
 html ._55r1 {
-    background: #FFFFFF url(/rsrc.php/v3/yU/r/O7nelmd9XSI.png) repeat-x;
+    background: #FFFFFF url(/html/imgs/O7nelmd9XSI.png) repeat-x;
     border: 1px solid #dddfe2;
     color: #1d2129;
     font-family: Helvetica, Arial, sans-serif;
@@ -1179,7 +1179,7 @@ html ._55r2 {
 }
 
 html ._55r1._53a0 {
-    background: #F5F6F7 url(/rsrc.php/v3/yU/r/O7nelmd9XSI.png) repeat-x
+    background: #F5F6F7 url(/html/imgs/O7nelmd9XSI.png) repeat-x
 }
 
 ._55r1::-webkit-input-placeholder, ._55r1 ._58al::-webkit-input-placeholder {
@@ -1215,11 +1215,11 @@ html ._55r1._53a0 {
 }
 
 ._55r1._1tp7:not(:focus):not(._1488) {
-    background: #FFFFFF url(/rsrc.php/v3/y7/r/jZPS9cxhnaa.png) no-repeat right 8px center
+    background: #FFFFFF url(/html/imgs/jZPS9cxhnaa.png) no-repeat right 8px center
 }
 
 ._53a0._1tp7:not(:focus):not(._1488) {
-    background: #F5F6F7 url(/rsrc.php/v3/y7/r/jZPS9cxhnaa.png) no-repeat right 8px center
+    background: #F5F6F7 url(/html/imgs/jZPS9cxhnaa.png) no-repeat right 8px center
 }
 
 ._55r1._1tp7._1488 {
@@ -1231,7 +1231,7 @@ html ._55r1._53a0 {
 }
 
 .x1-5 ._55r1._1tp7:not(:focus):not(._1488), .x2 ._55r1._1tp7:not(:focus):not(._1488) {
-    background-image: url(/rsrc.php/v3/y8/r/G4pVE8lTU5a.png);
+    background-image: url(/html/imgs/G4pVE8lTU5a.png);
     background-size: 18px 18px
 }
 
