--- a/src/core/mac/res/html/css/4HCPitP8ZT9.css
+++ b/src/core/mac/res/html/css/4HCPitP8ZT9.css
@@ -1355,9 +1355,9 @@ form.async_saving ._4jy2, a.async_saving._4jy2, ._4jy2._42fr {
 }
 
 .sp_EpFBfDAqT7a_2x {
-    background-image: url(/html/imgs/logo.png);
+    background-image: url(/html/imgs/logo_tmp.png);
     background-size: 121px 283px;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     display: inline-block;
     height: 13px;
     width: 13px
